header alignment fix and About copy fix

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -85,7 +85,7 @@ html {
                 margin-top: 1rem;
             }
 
-            @media screen and (max-width: 517px) {
+            @media screen and (max-width: 532px) {
                 flex-direction: column;
                 align-items: center;
             }
